# cqrs-eventsourcing

./: Cargo.toml  README.md
src/: aggregate.rs  command.rs  cqrs.rs  domain_event.rs  error.rs  file_eventstore.rs  formated_event.rs  given_then_test.rs  handler.rs  lib.rs  query.rs  query_processor.rs  store.rs  types.rs
tests/: lib.rs  mock.rs
